--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>My CV</title>
+    <title>Nguyễn Tú Anh - CV</title>
   </head>
   <body>
     <div id="root"></div>
